# lab-oop

./: Banca.cpp  Banca.h  CMakeLists.txt  Client.cpp  Client.h  ContCurent.cpp  ContCurent.h  Depozit.cpp  Depozit.h  DepozitCapitalizare.cpp  DepozitCapitalizare.h  DepozitNormal.cpp  DepozitNormal.h  DepozitReinnoire.cpp  DepozitReinnoire.h  Exceptii.cpp  Exceptii.h  README.md  date.in  main.cpp  templatef.cpp  templatef.h
